--- a/views/index.html
+++ b/views/index.html
@@ -1,14 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>HTML 5 Boilerplate</title>
-    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+   
+  
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="/public/stylesheets/index_style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+	<title>PangPang</title>
+
   </head>
   <body>
-    <div>Hello world!</div>
-    <script src="/javascripts/index.js"></script>
+    <!-- 네비게이션바/ Header 시작 -->
+    <nav class="custom-navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
+      <div class="container">
+          <a class="navbar-brand" href="index.html">팡팡</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarsFurni">
+              <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
+                  <li class="nav-item">
+                      <div class="dropdown">
+                          <a class="nav-link" href="match.html">매치</a>
+                          <ul class="dropdown-content">
+                              <li><a class="nav-link" href="match.html">전체 매치</a></li>
+                              <li><a class="nav-link" href="write_match.html">매치 게시물 작성</a></li>
+                              <li><a class="nav-link" href="stadium.html">경기장 정보</a></li>
+                          </ul>
+                      </div>
+                  </li>
+                  <li class="nav-item">
+                      <div class="dropdown">
+                          <a class="nav-link" href="community.html">커뮤니티</a>
+                          <ul class="dropdown-content">
+                              <li><a class="nav-link" href="popular_board.html">인기 게시판</a></li>
+                              <li><a class="nav-link" href="daily_board.html">일일 게시판</a></li>
+                              <li><a class="nav-link" href="equipment_board.html">장비 게시판</a></li>
+                              <li><a class="nav-link" href="tip_board.html">꿀팁 게시판</a></li>
+                              <li><a class="nav-link" href="market_board.html">장터 게시판</a></li>
+                              <li><a class="nav-link" href="promotion_board.html">홍보 게시판</a></li>
+                          </ul>
+                      </div>
+                  </li>
+                  <li class="nav-item">
+                      <div class="dropdown">
+                          <a class="nav-link" href="contest.html">교내대회</a>
+                          <ul class="dropdown-content">
+                              <li><a class="nav-link" href="soccer.html">축구팀</a></li>
+                              <li><a class="nav-link" href="hockey.html">하키팀</a></li>
+                              <li><a class="nav-link" href="yeonchon-.html">연촌체전</a></li>
+                          </ul>
+                      </div>
+                  </li>
+                  <li class="nav-item">
+                      <div class="dropdown">
+                          <a class="nav-link" href="help.html">도움말</a>
+                          <ul class="dropdown-content">
+                              <li><a class="nav-link" href="notices.html">공지사항</a></li>
+                              <li><a class="nav-link" href="qna.html">Q&A</a></li>
+                              <li><a class="nav-link" href="faq.html">FAQ</a></li>
+                          </ul>
+                      </div>
+                  </li>
+              </ul>
+              <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
+                  <li><a class="nav-link" href="login.html"><i class="bi bi-person-fill"></i></a></li>
+                  <li><a class="nav-link" href=".html"></a></li>
+              </ul>
+          </div>
+      </div>
+    </nav>
+	<!-- 네비게이션바/ Header 끝 -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
-</html>
