--- a/views/login.html
+++ b/views/login.html
@@ -13,13 +13,23 @@
         body {
           display: flex;
           align-items: center;
-          padding-top: 40px;
+          padding-top: 50px;
           padding-bottom: 40px;
+          background-color: #f8f9fa;
+        }
+        .form-container {
+            width: 100%;
+            max-width: 500px; 
+            margin: auto;
+            border: 5px solid #006F3E ; 
+            border-radius: 10px; 
+            padding: 50px;
+            background-color: white; 
         }
 
         .form-signin {
           width: 100%;
-          max-width: 330px;
+          max-width: 500px;
           padding: 15px;
           margin: auto;
           /* background-color: #3CB371; */
@@ -37,12 +47,14 @@
           margin-bottom: -1px;
           border-bottom-right-radius: 0;
           border-bottom-left-radius: 0;
+          border: 1px solid #006F3E;
         }
 
         .form-signin input[type="password"] {
           margin-bottom: 10px;
           border-top-left-radius: 0;
           border-top-right-radius: 0;
+          border: 1px solid #006F3E;
         }
 
         .invalid-feedback {
@@ -56,6 +68,22 @@
         .card{
           --bs-card-bg: var(--bs-body-bg);
         }
+        .loginbutton {
+          border: 2px solid #006F3E; 
+          background-color: #006F3E;
+          padding: 8px 8px;
+          color : white;
+        }
+        .signup-button{
+          margin-top: 20px;
+        }
+        .signup-button a {
+          border: 2px solid #006F3E; 
+          background-color: #006F3E;
+          padding: 8px 8px;
+          color : white;
+          text-decoration: none; /*밑줄 없애기*/
+        }
 
         /* .container{
 
@@ -64,7 +92,7 @@
   </head>
 
   <body>
-    <!-- <div class="container"></div> -->
+    <main class="form-container">
     <main class="form-signin">
         <form>
           <h1 class="h3 mb-3 fw-normal">반갑습니다!</h1>
@@ -80,15 +108,18 @@
               <div class="invalid-feedback">Please enter your password.</div>
           </div>
 
-          <div class="checkbox mb-3">
-              <label for="rememberMe">아이디 저장</label>
-              <input type="checkbox" value="remember-me" id="rememberMe">
-              
-          </div>
+          <div class="d-flex justify-content-between align-items-center mb-3">
+            <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="rememberMe">
+                <label class="form-check-label" for="rememberMe">아이디 저장</label>
+            </div>
 
-          <button class="loginbutton" type="submit">로그인하기</button>
           
-          <div><a href="signup.html">Create an account</a></div>
+            <button class="loginbutton" type="submit">로그인</button>
+        </div>
+          
+          <div class="signup-button"><a href="signup.html">회원가입</a>
+        </div>
       </form>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
