--- a/views/index.html
+++ b/views/index.html
@@ -115,7 +115,7 @@
           </ul>
           <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
             <li>
-              <a class="nav-link" href="login.html"
+              <a class="nav-link" href="/login"
                 ><i class="bi bi-person-fill"></i
               ></a>
             </li>
