--- a/views/index.html
+++ b/views/index.html
@@ -4,21 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="/stylesheets/index_style.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"/>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/index_style.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
     <title>PangPang</title>
   </head>
   <body>
@@ -28,16 +16,8 @@
       arial-label="Furni navigation bar"
     >
       <div class="container">
-        <a class="navbar-brand" href="index.html">팡팡</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarsFurni"
-          aria-controls="navbarsFurni"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+        <a class="navbar-brand" href="">팡팡</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -48,14 +28,8 @@
                 <a class="nav-link" href="match.html">매치</a>
                 <ul class="dropdown-content">
                   <li><a class="nav-link" href="match.html">전체 매치</a></li>
-                  <li>
-                    <a class="nav-link" href="write_match.html"
-                      >매치 게시물 작성</a
-                    >
-                  </li>
-                  <li>
-                    <a class="nav-link" href="stadium.html">경기장 정보</a>
-                  </li>
+                  <li><a class="nav-link" href="write_match.html">매치 게시물 작성</a></li>
+                  <li><a class="nav-link" href="stadium.html">경기장 정보</a></li>
                 </ul>
               </div>
             </li>
@@ -63,30 +37,12 @@
               <div class="dropdown">
                 <a class="nav-link" href="community.html">커뮤니티</a>
                 <ul class="dropdown-content">
-                  <li>
-                    <a class="nav-link" href="popular_board.html"
-                      >인기 게시판</a
-                    >
-                  </li>
-                  <li>
-                    <a class="nav-link" href="daily_board.html">일일 게시판</a>
-                  </li>
-                  <li>
-                    <a class="nav-link" href="equipment_board.html"
-                      >장비 게시판</a
-                    >
-                  </li>
-                  <li>
-                    <a class="nav-link" href="tip_board.html">꿀팁 게시판</a>
-                  </li>
-                  <li>
-                    <a class="nav-link" href="market_board.html">장터 게시판</a>
-                  </li>
-                  <li>
-                    <a class="nav-link" href="promotion_board.html"
-                      >홍보 게시판</a
-                    >
-                  </li>
+                  <li><a class="nav-link" href="popular_board.html">인기 게시판</a></li>
+                  <li><a class="nav-link" href="daily_board.html">일일 게시판</a></li>
+                  <li><a class="nav-link" href="equipment_board.html">장비 게시판</a></li>
+                  <li><a class="nav-link" href="tip_board.html">꿀팁 게시판</a></li>
+                  <li><a class="nav-link" href="market_board.html">장터 게시판</a></li>
+                  <li><a class="nav-link" href="promotion_board.html">홍보 게시판</a></li>
                 </ul>
               </div>
             </li>
@@ -96,9 +52,7 @@
                 <ul class="dropdown-content">
                   <li><a class="nav-link" href="soccer.html">축구팀</a></li>
                   <li><a class="nav-link" href="hockey.html">하키팀</a></li>
-                  <li>
-                    <a class="nav-link" href="yeonchon-.html">연촌체전</a>
-                  </li>
+                  <li><a class="nav-link" href="yeonchon-.html">연촌체전</a></li>
                 </ul>
               </div>
             </li>
@@ -114,12 +68,7 @@
             </li>
           </ul>
           <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-            <li>
-              <a class="nav-link" href="/login"
-                ><i class="bi bi-person-fill"></i
-              ></a>
-            </li>
-            <li><a class="nav-link" href=".html"></a></li>
+            <li><a class="nav-link" href="/login"><i class="bi bi-person-fill"></i></a></li>
           </ul>
         </div>
       </div>
