--- a/views/login.html
+++ b/views/login.html
@@ -13,23 +13,22 @@
         body {
           display: flex;
           align-items: center;
-          padding-top: 50px;
+          padding-top: 40px;
           padding-bottom: 40px;
-          background-color: #f8f9fa;
         }
-        .form-container {
-            width: 100%;
-            max-width: 500px; 
-            margin: auto;
-            border: 5px solid #006F3E ; 
-            border-radius: 10px; 
-            padding: 50px;
-            background-color: white; 
+
+        .container {
+          background-color: #fff;
+          padding: 20px;
+          border-radius: 8px;
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+          width: 600px;
+          text-align: center;
         }
 
         .form-signin {
           width: 100%;
-          max-width: 500px;
+          max-width: 330px;
           padding: 15px;
           margin: auto;
           /* background-color: #3CB371; */
@@ -47,14 +46,12 @@
           margin-bottom: -1px;
           border-bottom-right-radius: 0;
           border-bottom-left-radius: 0;
-          border: 1px solid #006F3E;
         }
 
         .form-signin input[type="password"] {
           margin-bottom: 10px;
           border-top-left-radius: 0;
           border-top-right-radius: 0;
-          border: 1px solid #006F3E;
         }
 
         .invalid-feedback {
@@ -68,58 +65,51 @@
         .card{
           --bs-card-bg: var(--bs-body-bg);
         }
-        .loginbutton {
-          border: 2px solid #006F3E; 
-          background-color: #006F3E;
-          padding: 8px 8px;
-          color : white;
-        }
-        .signup-button{
-          margin-top: 20px;
-        }
-        .signup-button a {
-          border: 2px solid #006F3E; 
-          background-color: #006F3E;
-          padding: 8px 8px;
-          color : white;
-          text-decoration: none; /*밑줄 없애기*/
+
+        button {
+          background-color: #4caf50;
+          color: white;
+          padding: 10px 15px;
+          margin: 8px 0;
+          border: none;
+          border-radius: 4px;
+          cursor: pointer;
         }
 
-        /* .container{
+        button:hover {
+          background-color: #45a049;
+        }
 
-        } */
+        div > a {
+          float: right;
+        }
     </style>
   </head>
 
   <body>
-    <main class="form-container">
-    <main class="form-signin">
+    <main class="container">
         <form>
           <h1 class="h3 mb-3 fw-normal">반갑습니다!</h1>
           <div class="form-floating">
-              <input type="id" class="form-control" id="floatingID" placeholder="">
+              <input type="id" class="form-control" id="floatingID" placeholder="" required>
               <label for="floatingID">ID</label>
               <div class="invalid-feedback">Please enter your username.</div>
           </div>
 
           <div class="form-floating">
-              <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+              <input type="password" class="form-control" id="floatingPassword" placeholder="Password" required>
               <label for="floatingPassword">Password</label>
               <div class="invalid-feedback">Please enter your password.</div>
           </div>
 
-          <div class="d-flex justify-content-between align-items-center mb-3">
-            <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="rememberMe">
-                <label class="form-check-label" for="rememberMe">아이디 저장</label>
-            </div>
+          <div class="checkbox mb-3">
+            <input type="checkbox" value="remember-me" id="rememberMe">       
+            <label for="rememberMe">아이디 저장</label>
+          </div>
 
+          <button class="loginbutton" type="submit">로그인하기</button>
           
-            <button class="loginbutton" type="submit">로그인</button>
-        </div>
-          
-          <div class="signup-button"><a href="signup.html">회원가입</a>
-        </div>
+          <div><a href="/login/signup">회원가입</a></div>
       </form>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
