경로 설정 완료

--- a/views/contest.html
+++ b/views/contest.html
@@ -73,7 +73,12 @@
       </div>
     </nav>
     <!-- 네비게이션바/ Header 끝 -->
-    <p>매치 메인 게시판이고, <br>매치 클릭하면 바로 전체 매치로 넘어감</p>
+    <p>교내 대회 메인 페이지, <br>여기서 축구, 하키, 연촌체전을 한눈에 볼 수 있도록함</p>
+    <p>이렇게 안할거면 삭제할거 2가지, 수정할거 1가지
+        <br>1. 이 페이지 삭제하고 
+        <br>2. info.js에서 5~16행(경로"/"인거) 삭제하고
+        <br>3. index.html에서 href="/info">교내대회</a> 부분 경로 /info/soccer, /info/hockey, /info/yeonchon 중에 선택해서 넣어주면 됨
+    </p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
