--- a/views/index.html
+++ b/views/index.html
@@ -11,10 +11,7 @@
   </head>
   <body>
     <!-- 네비게이션바/ Header 시작 -->
-    <nav
-      class="custom-navbar navbar navbar-expand-md navbar-dark bg-dark"
-      arial-label="Furni navigation bar"
-    >
+    <nav class="custom-navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
       <div class="container">
         <a class="navbar-brand" href="">팡팡</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,44 +22,44 @@
           <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
             <li class="nav-item">
               <div class="dropdown">
-                <a class="nav-link" href="match.html">매치</a>
+                <a class="nav-link" href="/match">매치</a>
                 <ul class="dropdown-content">
-                  <li><a class="nav-link" href="match.html">전체 매치</a></li>
-                  <li><a class="nav-link" href="write_match.html">매치 게시물 작성</a></li>
-                  <li><a class="nav-link" href="stadium.html">경기장 정보</a></li>
+                  <li><a class="nav-link" href="/match">전체 매치</a></li>
+                  <li><a class="nav-link" href="/match/write">매치 게시물 작성</a></li>
+                  <li><a class="nav-link" href="/info/stadium">경기장 정보</a></li>
                 </ul>
               </div>
             </li>
             <li class="nav-item">
               <div class="dropdown">
-                <a class="nav-link" href="community.html">커뮤니티</a>
+                <a class="nav-link" href="/community">커뮤니티</a>
                 <ul class="dropdown-content">
-                  <li><a class="nav-link" href="popular_board.html">인기 게시판</a></li>
-                  <li><a class="nav-link" href="daily_board.html">일일 게시판</a></li>
-                  <li><a class="nav-link" href="equipment_board.html">장비 게시판</a></li>
-                  <li><a class="nav-link" href="tip_board.html">꿀팁 게시판</a></li>
-                  <li><a class="nav-link" href="market_board.html">장터 게시판</a></li>
-                  <li><a class="nav-link" href="promotion_board.html">홍보 게시판</a></li>
+                  <li><a class="nav-link" href="/community/popular">인기 게시판</a></li>
+                  <li><a class="nav-link" href="/community/daily">일일 게시판</a></li>
+                  <li><a class="nav-link" href="/community/equipment">장비 게시판</a></li>
+                  <li><a class="nav-link" href="/community/tip">꿀팁 게시판</a></li>
+                  <li><a class="nav-link" href="/community/market">장터 게시판</a></li>
+                  <li><a class="nav-link" href="/community/promotion">홍보 게시판</a></li>
                 </ul>
               </div>
             </li>
             <li class="nav-item">
               <div class="dropdown">
-                <a class="nav-link" href="contest.html">교내대회</a>
+                <a class="nav-link" href="/info">교내대회</a>
                 <ul class="dropdown-content">
-                  <li><a class="nav-link" href="soccer.html">축구팀</a></li>
-                  <li><a class="nav-link" href="hockey.html">하키팀</a></li>
-                  <li><a class="nav-link" href="yeonchon-.html">연촌체전</a></li>
+                  <li><a class="nav-link" href="/info/soccer">축구팀</a></li>
+                  <li><a class="nav-link" href="/info/hockey">하키팀</a></li>
+                  <li><a class="nav-link" href="/info/yeonchon">연촌체전</a></li>
                 </ul>
               </div>
             </li>
             <li class="nav-item">
               <div class="dropdown">
-                <a class="nav-link" href="help.html">도움말</a>
+                <a class="nav-link" href="/help/notices">도움말</a>
                 <ul class="dropdown-content">
-                  <li><a class="nav-link" href="notices.html">공지사항</a></li>
-                  <li><a class="nav-link" href="qna.html">Q&A</a></li>
-                  <li><a class="nav-link" href="faq.html">FAQ</a></li>
+                  <li><a class="nav-link" href="/help/notices">공지사항</a></li>
+                  <li><a class="nav-link" href="/help/qna">Q&A</a></li>
+                  <li><a class="nav-link" href="/help/faq">FAQ</a></li>
                 </ul>
               </div>
             </li>
@@ -74,10 +71,6 @@
       </div>
     </nav>
     <!-- 네비게이션바/ Header 끝 -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
