--- a/views/stadium.html
+++ b/views/stadium.html
@@ -73,7 +73,7 @@
       </div>
     </nav>
     <!-- 네비게이션바/ Header 끝 -->
-    <p>매치 메인 게시판이고, <br>매치 클릭하면 바로 전체 매치로 넘어감</p>
+    <p>경기장 정보 안내 페이지</p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
