네비게이션 바 분리, 매칭 글 작성, 커뮤니티 글 작성, 글 목록 표시 기본 틀 구현

--- a/public/stylesheets/index_style.css
+++ b/public/stylesheets/index_style.css
@@ -125,10 +125,16 @@
 
 
 
-td {
+.Calendar>thead>tr>td {
     width: 100px;
     height: 70px;
     border: 1px solid black;
+}
+
+.Calendar>tbody>tr>td {
+  width: 100px;
+  height: 70px;
+  border: 1px solid black;
 }
 
 .Calendar {
