--- a/views/match.html
+++ b/views/match.html
@@ -72,8 +72,63 @@
         </div>
       </div>
     </nav>
+    <!--사이드바 -->
+    <div id="page-wrapper">
+      <div id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+          <li class="sidebar-brand">
+            <a href="/match">매치</a>
+          </li>
+          <li><a href="/match" class="ctive">전체 매치</a></li>
+          <li><a href="/match/write">매치 게시물 작성</a></li>
+          <li><a href="/info/stadium">경기장 정보</a></li>
+        </ul>
+      </div>
+
+
+
+    <!--게시글 리스트-->
+
+    <main class="mt-5 pt-5">
+      <div class="container-fluid px-4">
+        <h1 class="mt-4">Board</h1>
+     
+        <div class="card mb-4">
+          <div class="card-header">
+            <a class="btn btn-primary float-end" href="register"> <!-- <i class="fas fa-table me-1"></i> -->
+              <i class="fas fa-edit"></i> 글 작성
+            </a>
+          </div>
+          <div class="card-body">
+            <table class="table table-hover table-striped">
+              <thead>
+                <tr>
+                  <th>글번호</th>
+                  <th>제목</th>
+                  <th>작성자</th>
+                  <th>조회수</th>
+                  <th>작성일</th>
+                </tr>
+              </thead>
+              <tbody>
+                <c:forEach items="${boards}" var="board">
+                  <tr>
+                    <td>${board.bno}</td>
+                    <td>${board.title}</a></td>
+                    <td>${board.writer}</td>
+                    <td>${board.hitCount}</td>
+                    <td>${board.regDate}</td>
+                  </tr>
+                </c:forEach>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      </main>
+      </div>
     <!-- 네비게이션바/ Header 끝 -->
-    <p>매치 메인 게시판이고, <br>매치 클릭하면 바로 전체 매치로 넘어감</p>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
