--- a/views/match.html
+++ b/views/match.html
@@ -10,68 +10,29 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/index_style.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
     <title>PangPang</title>
+    <script>      
+      fetch('/navbar')
+        .then(response => {return response.text()})
+          .then(data => {document.getElementById("content").innerHTML = data;})
+          .catch(error => console.error('Error:', error));
+    </script>
   </head>
   <body>
-    <!-- 네비게이션바/ Header 시작 -->
-    <nav class="custom-navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
-      <div class="container">
-        <a class="navbar-brand" href="">팡팡</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarsFurni">
-          <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
-            <li class="nav-item">
-              <div class="dropdown">
-                <a class="nav-link" href="/match">매치</a>
-                <ul class="dropdown-content">
-                  <li><a class="nav-link" href="/match">전체 매치</a></li>
-                  <li><a class="nav-link" href="/match/write">매치 게시물 작성</a></li>
-                  <li><a class="nav-link" href="/info/stadium">경기장 정보</a></li>
-                </ul>
-              </div>
-            </li>
-            <li class="nav-item">
-              <div class="dropdown">
-                <a class="nav-link" href="/community">커뮤니티</a>
-                <ul class="dropdown-content">
-                  <li><a class="nav-link" href="/community/popular">인기 게시판</a></li>
-                  <li><a class="nav-link" href="/community/daily">일일 게시판</a></li>
-                  <li><a class="nav-link" href="/community/equipment">장비 게시판</a></li>
-                  <li><a class="nav-link" href="/community/tip">꿀팁 게시판</a></li>
-                  <li><a class="nav-link" href="/community/market">장터 게시판</a></li>
-                  <li><a class="nav-link" href="/community/promotion">홍보 게시판</a></li>
-                </ul>
-              </div>
-            </li>
-            <li class="nav-item">
-              <div class="dropdown">
-                <a class="nav-link" href="/info">교내대회</a>
-                <ul class="dropdown-content">
-                  <li><a class="nav-link" href="/info/soccer">축구팀</a></li>
-                  <li><a class="nav-link" href="/info/hockey">하키팀</a></li>
-                  <li><a class="nav-link" href="/info/yeonchon">연촌체전</a></li>
-                </ul>
-              </div>
-            </li>
-            <li class="nav-item">
-              <div class="dropdown">
-                <a class="nav-link" href="/help/notices">도움말</a>
-                <ul class="dropdown-content">
-                  <li><a class="nav-link" href="/help/notices">공지사항</a></li>
-                  <li><a class="nav-link" href="/help/qna">Q&A</a></li>
-                  <li><a class="nav-link" href="/help/faq">FAQ</a></li>
-                </ul>
-              </div>
-            </li>
-          </ul>
-          <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-            <li><a class="nav-link" href="/login"><i class="bi bi-person-fill"></i></a></li>
-          </ul>
+    <!-- 네비게이션바 -->
+    <div id='content'></div>
+    
+    <main class="mt-3 pt-1">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-12">
+           
+            <i class="bi bi-house-fill"> / 매치 / 전체 매치</i>
+          </div> 
         </div>
       </div>
-    </nav>
+    
+    </main>
+
     <!--사이드바 -->
     <div id="page-wrapper">
       <div id="sidebar-wrapper">
@@ -79,7 +40,7 @@
           <li class="sidebar-brand">
             <a href="/match">매치</a>
           </li>
-          <li><a href="/match" class="ctive">전체 매치</a></li>
+          <li><a href="/match" class="underline-on">전체 매치</a></li>
           <li><a href="/match/write">매치 게시물 작성</a></li>
           <li><a href="/info/stadium">경기장 정보</a></li>
         </ul>
@@ -88,14 +49,13 @@
 
 
     <!--게시글 리스트-->
-
-    <main class="mt-5 pt-5">
       <div class="container-fluid px-4">
-        <h1 class="mt-4">Board</h1>
-     
-        <div class="card mb-4">
+        <hr class="my-4" style="height: 3px; background-color: #006f3e;">
+        <h1 class="mt-5">Board</h1>
+        <div class="mt-5 pt-5">
+        <div class="card mb-4 ">
           <div class="card-header">
-            <a class="btn btn-primary float-end" href="register"> <!-- <i class="fas fa-table me-1"></i> -->
+            <a class="btn btn-primary float-end" style="background-color: #006f3e; color: white;"> 
               <i class="fas fa-edit"></i> 글 작성
             </a>
           </div>
@@ -125,9 +85,10 @@
           </div>
         </div>
       </div>
-      </main>
       </div>
-    <!-- 네비게이션바/ Header 끝 -->
+  
+    
+    
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
