--- a/views/yeonchon.html
+++ b/views/yeonchon.html
@@ -10,69 +10,16 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/index_style.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
     <title>PangPang</title>
+    <script>      
+      fetch('/navbar')
+        .then(response => {return response.text()})
+          .then(data => {document.getElementById("content").innerHTML = data;})
+          .catch(error => console.error('Error:', error));
+    </script>
   </head>
   <body>
-    <!-- 네비게이션바/ Header 시작 -->
-    <nav class="custom-navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
-      <div class="container">
-        <a class="navbar-brand" href="">팡팡</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarsFurni">
-          <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
-            <li class="nav-item">
-              <div class="dropdown">
-                <a class="nav-link" href="/match">매치</a>
-                <ul class="dropdown-content">
-                  <li><a class="nav-link" href="/match">전체 매치</a></li>
-                  <li><a class="nav-link" href="/match/write">매치 게시물 작성</a></li>
-                  <li><a class="nav-link" href="/info/stadium">경기장 정보</a></li>
-                </ul>
-              </div>
-            </li>
-            <li class="nav-item">
-              <div class="dropdown">
-                <a class="nav-link" href="/community">커뮤니티</a>
-                <ul class="dropdown-content">
-                  <li><a class="nav-link" href="/community/popular">인기 게시판</a></li>
-                  <li><a class="nav-link" href="/community/daily">일일 게시판</a></li>
-                  <li><a class="nav-link" href="/community/equipment">장비 게시판</a></li>
-                  <li><a class="nav-link" href="/community/tip">꿀팁 게시판</a></li>
-                  <li><a class="nav-link" href="/community/market">장터 게시판</a></li>
-                  <li><a class="nav-link" href="/community/promotion">홍보 게시판</a></li>
-                </ul>
-              </div>
-            </li>
-            <li class="nav-item">
-              <div class="dropdown">
-                <a class="nav-link" href="/info">교내대회</a>
-                <ul class="dropdown-content">
-                  <li><a class="nav-link" href="/info/soccer">축구팀</a></li>
-                  <li><a class="nav-link" href="/info/hockey">하키팀</a></li>
-                  <li><a class="nav-link" href="/info/yeonchon">연촌체전</a></li>
-                </ul>
-              </div>
-            </li>
-            <li class="nav-item">
-              <div class="dropdown">
-                <a class="nav-link" href="/help/notices">도움말</a>
-                <ul class="dropdown-content">
-                  <li><a class="nav-link" href="/help/notices">공지사항</a></li>
-                  <li><a class="nav-link" href="/help/qna">Q&A</a></li>
-                  <li><a class="nav-link" href="/help/faq">FAQ</a></li>
-                </ul>
-              </div>
-            </li>
-          </ul>
-          <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-            <li><a class="nav-link" href="/login"><i class="bi bi-person-fill"></i></a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- 네비게이션바/ Header 끝 -->
+    <!-- 네비게이션바 -->
+    <div id='content'></div>
     <p>연촌체전 경기 안내 페이지</p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
