모든 페이지 네비게이션바와 사이드바 추가

--- a/views/navbar.html
+++ b/views/navbar.html
@@ -35,8 +35,8 @@
             <div class="dropdown">
             <a class="nav-link" href="/info">교내대회</a>
             <ul class="dropdown-content">
-                <li><a class="nav-link" href="/info/soccer">축구팀</a></li>
-                <li><a class="nav-link" href="/info/hockey">하키팀</a></li>
+                <li><a class="nav-link" href="/info/soccer">축구</a></li>
+                <li><a class="nav-link" href="/info/hockey">하키</a></li>
                 <li><a class="nav-link" href="/info/yeonchon">연촌체전</a></li>
             </ul>
             </div>
