--- a/views/tip_board.html
+++ b/views/tip_board.html
@@ -22,6 +22,37 @@
     <!-- 네비게이션바 -->
     <div id='content'></div>
 
+    <!--빵 부스러기 (Breadcrumb)-->
+    <main class="mt-3 pt-1">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-12">
+           
+            <i class="bi bi-house-fill"> > 커뮤니티 > 꿀팁 게시판 </i>
+          </div> 
+        </div>
+      </div>
+    </main>
+    
+
+    <!--사이드바 -->
+    <div id="page-wrapper">
+      <div id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+          <li class="sidebar-brand">
+            <a href="/community" >커뮤니티</a>
+          </li>
+
+          <li><a href="/community/popular" >인기 게시판</a></li>
+          <li><a href="/community/daily">일일 게시판</a></li>
+          <li><a href="/community/equipment">장비 게시판</a></li>
+          <li><a href="/community/tip" class="underline-on">꿀팁 게시판</a></li>
+          <li><a href="/community/market">장터 게시판</a></li>
+          <li><a href="/community/promotion">홍보 게시판</a></li>
+        </ul>
+      </div>
+      <hr class="my-4" style="height: 3px; background-color: #006f3e;">
+
     <div class="container w-50">
       <h3 class="mb-3">게시판 리스트</h3>
       <table class="table table-border text-center">
