--- a/views/community.html
+++ b/views/community.html
@@ -20,6 +20,36 @@
   <body>
     <!-- 네비게이션바 -->
     <div id='content'></div>
+    <!--빵 부스러기 (Breadcrumb)-->
+    <main class="mt-3 pt-1"></main>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-12">
+           
+            <i class="bi bi-house-fill"> > 커뮤니티 </i>
+          </div> 
+        </div>
+      </div>
+    
+    
+
+    <!--사이드바 -->
+    <div id="page-wrapper">
+      <div id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+          <li class="sidebar-brand">
+            <a href="/community" class="underline-on">커뮤니티</a>
+          </li>
+
+          <li><a href="/community/popular">인기 게시판</a></li>
+          <li><a href="/community/daily">일일 게시판</a></li>
+          <li><a href="/community/equipment">장비 게시판</a></li>
+          <li><a href="/community/tip">꿀팁 게시판</a></li>
+          <li><a href="/community/market">장터 게시판</a></li>
+          <li><a href="/community/promotion">홍보 게시판</a></li>
+        </ul>
+      </div>
+      <hr class="my-4" style="height: 3px; background-color: #006f3e;">
   
     <p>커뮤니티 메인 페이지</p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
