--- a/views/contest.html
+++ b/views/contest.html
@@ -20,6 +20,34 @@
   <body>
     <!-- 네비게이션바 -->
     <div id='content'></div>
+
+    <!--빵 부스러기 (Breadcrumb)-->
+    <main class="mt-3 pt-1">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-12">
+           
+            <i class="bi bi-house-fill"> > 교내대회 </i>
+          </div> 
+        </div>
+      </div>
+    </main>
+    
+
+    <!--사이드바 -->
+    <div id="page-wrapper">
+      <div id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+          <li class="sidebar-brand">
+            <a href="/info" class="underline-on">교내대회</a>
+          </li>
+          <li><a href="/info/soccer">축구팀</a></li>
+          <li><a href="/info/hockey">하키팀</a></li>
+          <li><a href="/info/yeonchon">연촌체전</a></li>
+        </ul>
+      </div>
+      <hr class="my-4" style="height: 3px; background-color: #006f3e;">
+
     <p>교내 대회 메인 페이지, <br>여기서 축구, 하키, 연촌체전을 한눈에 볼 수 있도록함</p>
     <p>이렇게 안할거면 삭제할거 2가지, 수정할거 1가지
         <br>1. 이 페이지 삭제하고 
