--- a/views/faq.html
+++ b/views/faq.html
@@ -20,6 +20,32 @@
   <body>
     <!-- 네비게이션바 -->
     <div id='content'></div>
+
+    <!--빵 부스러기 (Breadcrumb)-->
+    <main class="mt-3 pt-1">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-12">
+           
+            <i class="bi bi-house-fill"> > 도움말 > FAQ</i>
+          </div> 
+        </div>
+      </div>
+    </main>
+
+    <!--사이드바 -->
+    <div id="page-wrapper">
+      <div id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+          <li class="sidebar-brand">
+            <a href="/help/notices" >도움말</a>
+          </li>
+          <li><a href="/help/notices">공지사항</a></li>
+          <li><a href="/help/qna">QnA</a></li>
+          <li><a href="/help/faq" class="underline-on">FAQ</a></li>
+        </ul>
+      </div>
+      <hr class="my-4" style="height: 3px; background-color: #006f3e;">
     <p>faq 페이지</p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
