--- a/views/match.html
+++ b/views/match.html
@@ -21,6 +21,7 @@
     <!-- 네비게이션바 -->
     <div id='content'></div>
     
+    <!--빵 부스러기 (Breadcrumb)-->
     <main class="mt-3 pt-1">
       <div class="container-fluid">
         <div class="row">
@@ -45,12 +46,12 @@
           <li><a href="/info/stadium">경기장 정보</a></li>
         </ul>
       </div>
+      <hr class="my-4" style="height: 3px; background-color: #006f3e;">
 
 
 
     <!--게시글 리스트-->
       <div class="container-fluid px-4">
-        <hr class="my-4" style="height: 3px; background-color: #006f3e;">
         <h1 class="mt-5">Board</h1>
         <div class="mt-5 pt-5">
         <div class="card mb-4 ">
