--- a/views/stadium.html
+++ b/views/stadium.html
@@ -20,6 +20,34 @@
   <body>
     <!-- 네비게이션바 -->
     <div id='content'></div>
+
+    <!--빵 부스러기 (Breadcrumb)-->
+    <main class="mt-3 pt-1">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-12">
+           
+            <i class="bi bi-house-fill"> / 매치 / 경기장 정보</i>
+          </div> 
+        </div>
+      </div>
+    
+    </main>
+
+    <!--사이드바 -->
+    <div id="page-wrapper">
+      <div id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+          <li class="sidebar-brand">
+            <a href="/match">매치</a>
+          </li>
+          <li><a href="/match">전체 매치</a></li>
+          <li><a href="/match/write">매치 게시물 작성</a></li>
+          <li><a href="/info/stadium" class="underline-on">경기장 정보</a></li>
+        </ul>
+      </div>
+      <hr class="my-4" style="height: 3px; background-color: #006f3e;">
+
     <p>경기장 정보 안내 페이지</p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
