--- a/views/write_match.html
+++ b/views/write_match.html
@@ -94,6 +94,33 @@
   <!-- 네비게이션바 -->
   <div id='content'></div>
 
+  <!--빵 부스러기 (Breadcrumb)-->
+  <main class="mt-3 pt-1">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+         
+          <i class="bi bi-house-fill"> / 매치 / 매치 게시물 작성</i>
+        </div> 
+      </div>
+    </div>
+  
+  </main>
+
+  <!--사이드바 -->
+  <div id="page-wrapper">
+    <div id="sidebar-wrapper">
+      <ul class="sidebar-nav">
+        <li class="sidebar-brand">
+          <a href="/match">매치</a>
+        </li>
+        <li><a href="/match">전체 매치</a></li>
+        <li><a href="/match/write" class="underline-on">매치 게시물 작성</a></li>
+        <li><a href="/info/stadium">경기장 정보</a></li>
+      </ul>
+    </div>
+    <hr class="my-4" style="height: 3px; background-color: #006f3e;">
+
   <div class="container">
     <div class="header">
         <h2>매치 글 작성</h2>
