--- a/views/match.html
+++ b/views/match.html
@@ -56,7 +56,7 @@
         <div class="mt-5 pt-5">
         <div class="card mb-4 ">
           <div class="card-header">
-            <a class="btn btn-primary float-end" style="background-color: #006f3e; color: white;"> 
+            <a class="btn btn-primary float-end" href="/match/write" style="background-color: #006f3e; color: white;"> 
               <i class="fas fa-edit"></i> 글 작성
             </a>
           </div>
@@ -67,18 +67,16 @@
                   <th>글번호</th>
                   <th>제목</th>
                   <th>작성자</th>
-                  <th>조회수</th>
                   <th>작성일</th>
                 </tr>
               </thead>
               <tbody>
                 <c:forEach items="${boards}" var="board">
                   <tr>
-                    <td>${board.bno}</td>
+                    <td>${board.id}</td>
                     <td>${board.title}</a></td>
                     <td>${board.writer}</td>
-                    <td>${board.hitCount}</td>
-                    <td>${board.regDate}</td>
+                    <td>${board.createdAt}</td>
                   </tr>
                 </c:forEach>
               </tbody>
