--- a/views/read_match.html
+++ b/views/read_match.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"/>
-    <link rel="stylesheet" type="text/css" href="/stylesheets/index_style.css"/>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/match.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
     <title>PangPang</title>
     <script>      
@@ -95,6 +95,15 @@
                         </tr>
                     </tbody>
                 </table>
+                <div id="form-commentInfo">
+                  <div id="comment-count">댓글 <span id="count">0</span></div>
+                  <input id="comment-input" placeholder="댓글을 입력해 주세요.">
+                  <button id="submit">등록</button>
+              </div>
+              <div id=comments>
+          
+              </div>
+          
                 
                 <table class="table table-condensed">
                     <thead>
@@ -102,7 +111,7 @@
                             <td>
                                 <span style='float:right'>
                                     <a href="/match" class="btn btn-success">목록</a>
-                                    <a href="" class="btn btn-success">수정</a>
+                                    <a href="/match/edit" class="btn btn-success">수정</a>
                                     <a href="" class="btn btn-success">삭제</a>
                                     <a href="/match/write" class="btn btn-success">글쓰기</a>
                                 </span>
