--- a/views/navbar.html
+++ b/views/navbar.html
@@ -1,7 +1,7 @@
 <!-- 네비게이션바/ Header 시작 -->
 <nav class="custom-navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
     <div class="container">
-    <a class="navbar-brand" href="">팡팡</a>
+    <a class="navbar-brand" href="/">팡팡</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -53,7 +53,7 @@
         </li>
         </ul>
         <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-        <li><a class="nav-link" href="/login"><i class="bi bi-person-fill"></i></a></li>
+        <li><a class="nav-link" href="/users"><i class="bi bi-person-fill"></i></a></li>
         </ul>
     </div>
     </div>
