스키마 수정 및 게시물 리스트 완성

--- a/views/signup.html
+++ b/views/signup.html
@@ -33,7 +33,7 @@
     }
 
     button {
-      background-color: #4caf50;
+      background-color: #006f3e;
       color: white;
       padding: 10px 15px;
       margin: 8px 0;
