--- a/views/login.html
+++ b/views/login.html
@@ -69,7 +69,7 @@
         }
 
         button:hover {
-          background-color: #45a049;
+          background-color: #006f3e;
         }
 
         div > a {
