--- a/views/match.html
+++ b/views/match.html
@@ -1,5 +1,3 @@
-<!-- 복붙한거임 -->
-
 <!DOCTYPE html>
 <html lang="ko">
   <head>
@@ -52,7 +50,7 @@
 
     <!--게시글 리스트-->
       <div class="container-fluid px-4">
-        <h1 class="mt-5">Board</h1>
+        <h1 class="mt-5">매치글</h1>
         <div class="mt-5 pt-5">
         <div class="card mb-4 ">
           <div class="card-header">
@@ -64,21 +62,16 @@
             <table class="table table-hover table-striped">
               <thead>
                 <tr>
-                  <th>글번호</th>
+                  <th>번호</th>
+                  <th>운동종목</th>
                   <th>제목</th>
                   <th>작성자</th>
                   <th>작성일</th>
                 </tr>
               </thead>
-              <tbody>
-                <c:forEach items="${boards}" var="board">
-                  <tr>
-                    <td>${board.id}</td>
-                    <td>${board.title}</a></td>
-                    <td>${board.writer}</td>
-                    <td>${board.createdAt}</td>
-                  </tr>
-                </c:forEach>
+              <tbody id="matchTableBody">
+                
+               
               </tbody>
             </table>
           </div>
@@ -90,5 +83,26 @@
     
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script>// HTML 템플릿에 데이터 추가
+    const tbody = document.querySelector('tbody');
+    fetch('/match/list')
+        .then(response => response.json())
+        .then(data => {
+          const tbody = document.getElementById('matchTableBody');
+          data.boards.forEach((matches, index) => {
+            const row = document.createElement('tr');
+            const formattedDate = new Date(matches.createdAt).toLocaleDateString();
+            row.innerHTML = `
+              <td>${index + 1}</td>
+              <td>${matches.sport}</td>
+              <td>${matches.title}</td>
+              <td>${matches.writer}</td>
+              <td>${formattedDate}</td>
+            `;
+            tbody.appendChild(row);
+          });
+        })
+        .catch(error => console.error('Error:', error));
+  </script>
   </body>
 </html>
