매치리스트 디자인 수정

--- a/views/match.html
+++ b/views/match.html
@@ -49,10 +49,12 @@
 
 
     <!--게시글 리스트-->
-      <div class="container-fluid px-4">
-        <h1 class="mt-5">매치글</h1>
+    
+      <div class="container-fluid  p-5">
+        <h2 class="text-center mt-5 fw-bold ">매치글</h1>
         <div class="mt-5 pt-5">
-        <div class="card mb-4 ">
+        <div class="container-fluid p-5 me-5 mr-5list-container">
+        <div class="card mb-1 p-3">
           <div class="card-header">
             <a class="btn btn-primary float-end" href="/match/write" style="background-color: #006f3e; color: white;"> 
               <i class="fas fa-edit"></i> 글 작성
@@ -79,6 +81,7 @@
         </div>
       </div>
       </div>
+    </div>
   
     <!-- 페이지네이션 -->
     <div class="pagination justify-content-center mt-4" id="pagination">
